layout shift correction

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-  border: 1px dashed var(--stroke-default);
+  border: 0.2rem dashed transparent;
+  outline: 1px dashed var(--stroke-default);
   border-radius: 0.8rem;
 
   display: grid;
@@ -26,7 +27,8 @@
   }
 
   &:hover, &:has(input:focus) {
-    border: 0.2rem dashed var(--stroke-highlight);
+    outline-width: 0;
+    border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
     
     p {
