--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -2,7 +2,8 @@ input, textarea, select {
   appearance: none;
   width: 100%;
   border-radius: 0.8rem;
-  border: 1px solid var(--stroke-default);
+  outline: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
   padding: 1.2rem 1.6rem;
   
   color: var(--text-primary);
@@ -18,8 +19,8 @@ label {
 input:focus,
 select:focus,
 textarea:focus {
-  outline: 0.25rem solid var(--surface-secondary);
-  border: 0.125rem solid var(--stroke-highlight);
+  outline: 0.4rem solid var(--surface-secondary);
+  border-color: var(--stroke-highlight);
   outline-offset: .1px;
 }
 
